--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Pipeline and Merge to Main
 on:
   push:
     branches:
+      - main
       - dev
 
 jobs:
@@ -16,8 +17,8 @@ jobs:
       - name: Run pipeline
         run: ./run-pipeline.sh
 
-      - name: Merge to main
+      - name: dev to main
         uses: peaceiris/actions-merge-branch@v1
-        env:
+        with:
           github_token: ${{ secrets.GIT_TOKEN }}
           branch: main
